--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_login_image"
     android:scaleType = "centerCrop"
-    tools:context=".Login">
+    tools:context=".pages.activity.Login">
 
     <Button
         android:id="@+id/buttonLogin"
@@ -133,5 +133,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.981" />
+
+    <ImageView
+        android:id="@+id/imageViewFingerPrint"
+        android:layout_width="71dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
+        app:srcCompat="@drawable/ic_fingerprint" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
