--- a/app/src/main/res/layout/fragment_hero.xml
+++ b/app/src/main/res/layout/fragment_hero.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_700">
+    android:background="@color/gray_700"
+    tools:context=".pages.fragment.Heroes">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHero"
