--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color_200"
-    tools:context=".HomepageActivity">
+    tools:context=".pages.fragment.Home">
 
     <TextView
         android:id="@+id/textViewGreetings"
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewBook"
+        android:id="@+id/recyclerViewBookBestRated"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
