--- a/app/src/main/res/layout/list_item_books.xml
+++ b/app/src/main/res/layout/list_item_books.xml
@@ -2,58 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cILListItem"
-    android:layout_width="150dp"
+    android:id="@+id/linearLayout"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@color/white"
-    android:orientation="horizontal"
     android:padding="5dp">
 
     <ImageView
-        android:id="@+id/imageViewBookMin"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:scaleType="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageViewListItemBook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.018"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textViewBookTitle"
+        android:id="@+id/textViewBookTitleListItemBooks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/custom_input"
+        android:layout_marginTop="8dp"
+        android:text="Title"
         android:textAlignment="center"
-        android:textColor="@color/gray_500"
-        android:textSize="14sp"
+        android:textColor="@color/gray_700"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewBookMin"
-        tools:text="Title" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewListItemBook" />
 
     <TextView
-        android:id="@+id/textViewBookAuthor"
+        android:id="@+id/textViewBookAuthorListItemBooks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/custom_input"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Author"
         android:textAlignment="center"
-        android:textColor="@color/gray_500"
-        android:textSize="10sp"
-        android:textStyle="bold"
+        android:textColor="@color/gray_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitle"
-        app:layout_constraintVertical_bias="0.4" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitleListItemBooks"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
