--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/home_item"
         android:icon="@drawable/ic_home_menu"
         android:title="Home" />
     <item
-        android:id="@+id/heroes"
+        android:id="@+id/book_item"
+        android:icon="@drawable/ic_book"
+        android:title="Livros" />
+    <item
+        android:id="@+id/heroes_item"
         android:icon="@drawable/ic_heroes_menu"
         android:title="Heróis" />
     <item
-        android:id="@+id/settings"
+        android:id="@+id/settings_item"
         android:icon="@drawable/ic_account_menu"
         android:title="@string/conta" />
 
