--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -11,11 +11,14 @@
     <android.widget.SearchView
         android:id="@+id/searchViewBooks"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@color/secondary_color_500"
+        android:backgroundTint="@color/secondary_color_500"
         android:iconifiedByDefault="true"
+        android:theme="@style/ThemeOverlay.SearchView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,18 +26,19 @@
 
     <Spinner
         android:id="@+id/spinnerFilterBook"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
+        android:layout_width="160dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textColor="@color/gray_700"
+        android:dropDownWidth="wrap_content"
         android:spinnerMode="dialog"
+        android:textColor="@color/gray_700"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewBookList"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -42,9 +46,10 @@
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchViewBooks"
+        app:layout_constraintVertical_bias="0.0"
         app:spanCount="2" />
 
 
