--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color_500</item>
         <item name="colorPrimaryVariant">@color/primary_color_200</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/gray_700</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondary_color_200</item>
         <item name="colorSecondaryVariant">@color/secondary_color_700</item>
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
+    </style>
+    <style name="ThemeOverlay.SearchView" parent="">
         <item name="android:editTextColor">@color/gray_700</item>
+        <item name="android:textColorHint">@color/gray_700</item>
     </style>
 </resources>
