--- a/app/src/main/res/layout/list_item_books.xml
+++ b/app/src/main/res/layout/list_item_books.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/imageViewListItemBook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
